tests/unit-fail-compilation/j027a.ref
j027a.c:2:2: error: missing terminating ' character [-Werror]
  'x
  ^
j027a.c:3:2: error: missing terminating ' character [-Werror]
  ';
  ^
cc1: all warnings being treated as errors
